<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pillbox.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/tool_bar"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_keyboard_arrow_left_black_24px"
                android:layout_weight="1"
                android:contentDescription="@string/date_backward_desc"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="decreaseDate"/>
            <TextView
                android:id="@+id/current_date"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="@dimen/date_size"
                android:layout_height="match_parent" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_arrow_right_black_24px"
                android:contentDescription="@string/date_forward_desc"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="increaseDate"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <fragment class="com.pillbox.DetailedViewFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/detailed_view_fragment"
        tools:layout="@layout/fragment_detailed_view"/>

    <fragment class="com.pillbox.DailyViewFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/daily_view_fragment"
        tools:layout="@layout/fragment_item_list" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/daily_button_title"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/calendar_button_title"
                android:onClick="goToCalendar"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>


</LinearLayout>
